kubernetes/apps/default/wordpress/wordpress-0/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wordpress-0
  namespace: default
spec:
  parentRefs:
    - name: envoy-external
      namespace: networking
      sectionName: https
  hostnames:
    - "${SECRET_WP_0_DOMAIN}"
    - "www.${SECRET_WP_0_DOMAIN}"
  rules:
    - backendRefs:
        - name: wordpress-0
          port: 80
